nzbget/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nzbget
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      nodeSelector:
        kubernetes.io/hostname: biggs.radoncanyon.com
      volumes:
      - name: nzbget
        hostPath:
          path: /dockerfs/nzbget
      - name: downloads-nas1
        persistentVolumeClaim:
          claimName: downloads-nas1
      - name: downloads-nas2
        persistentVolumeClaim:
          claimName: downloads-nas2
      containers:
      - name: nzbget
        image: linuxserver/nzbget
        volumeMounts:
        - name: nzbget
          subPath: config
          mountPath: /config
        - name: nzbget
          subPath: intermediate
          mountPath: /intermediate
        - name: downloads-nas1
          mountPath: /downloads/nas1
        - name: downloads-nas2
          mountPath: /downloads/nas2
        ports:
        - name: nzbget
          containerPort: 6789
        livenessProbe:
          tcpSocket:
            port: nzbget
          initialDelaySeconds: 60
          periodSeconds: 5
