nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget-service
spec:
  selector:
    app: nzbget
  ports:
  - port: 6789
