nzbget/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nzbget
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: "2m"
spec:
  rules:
  - host: nzbget.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nzbget
          servicePort: 6789
